Fix search field in FireFox

--- a/src/styles/critical.less
+++ b/src/styles/critical.less
@@ -148,8 +148,7 @@ header {
         text-align: right;
     }
 
-    &-input,
-    &-input:-webkit-autofill {
+    &-input {
         background-color: @background-color--light;
         color: @text-color--dark;
         border-width: 0;
